<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forget_Email"
    android:background="@color/white"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget"
        android:textColor="#082453"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:textSize="25dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgettext"
        android:textColor="#082453"
        android:textSize="15dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/phonenumber"
        android:inputType="text"
        android:textColorHint="#A89A9A"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapeicon"
            android:inputType="text"
            android:textColor="#082453"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>