<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signup"
    android:background="@color/white"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textSize="50sp"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"
                android:textColor="#082453"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/name"
                android:inputType="text"
                android:textColorHint="#A89A9A"
                >

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shapeicon"
                    android:inputType="text"
                    android:textColor="#082453"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/phone"
                android:inputType="textEmailAddress"
                android:textColorHint="#A89A9A"
                >
                <EditText
                    android:id="@+id/userphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#082453"
                    android:background="@drawable/shapeicon"
                    android:inputType="phone"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/telephone"
                android:inputType="textEmailAddress"
                android:textColorHint="#A89A9A"
                >
                <EditText
                    android:id="@+id/usertelephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#082453"
                    android:background="@drawable/shapeicon"
                    android:inputType="phone"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="#A89A9A"
                >
                <EditText
                    android:id="@+id/useremail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#082453"
                    android:background="@drawable/shapeicon"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <Spinner
                    android:id="@+id/userday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="#082453"
                    android:background="@drawable/shapeicon"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    />
                <Spinner
                    android:id="@+id/usermonth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="#082453"
                    android:background="@drawable/shapeicon"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    />
                <Spinner
                    android:id="@+id/useryear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="#082453"
                    android:background="@drawable/shapeicon"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"

                    />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/eye"
                app:endIconMode="password_toggle"
                app:endIconDrawable="@drawable/invisible"
                android:hint="@string/password"
                android:textColorHint="#A89A9A"
                >
                <EditText
                    android:id="@+id/userpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#082453"
                    android:background="@drawable/shapeicon"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp">
                    <RadioButton
                        android:id="@+id/usergendermale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:textColor="#082453"
                        android:textSize="20dp"
                        android:layout_marginRight="40dp"
                        />
                    <RadioButton
                        android:id="@+id/usergenderfemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Famale"
                        android:textColor="#082453"
                        android:textSize="20dp"
                        />
                </RadioGroup>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/flatnumber"
                android:textColorHint="#A89A9A"
                >
                <EditText
                    android:id="@+id/userflat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#082453"
                    android:background="@drawable/shapeicon"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/buildingadress"
                android:textColorHint="#A89A9A"
                >
                <EditText
                    android:id="@+id/userbuilding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#082453"
                    android:background="@drawable/shapeicon"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/roadadress"
                android:textColorHint="#A89A9A"
                >
                <EditText
                    android:id="@+id/userroad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#082453"
                    android:background="@drawable/shapeicon"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/cityname"
                android:textColorHint="#A89A9A"
                >
                <EditText
                    android:id="@+id/usercity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#082453"
                    android:background="@drawable/shapeicon"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/CPR"
                android:textColorHint="#A89A9A"
                >
                <EditText
                    android:id="@+id/cpr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#082453"
                    android:background="@drawable/shapeicon"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="#082453"
                android:text="@string/signUp"
                android:textColor="@android:color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="if you  have account,SIGN IN"
                android:textColor="#082453"
                android:onClick="Go_SignIn"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>