<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarClaim"
    android:background="@color/white"
    android:padding="20dp"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fireClaim"
            android:textColor="@color/purple_500"
            android:textSize="30dp"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PolicyNumber"
            android:textSize="20dp"
            android:textColor="@color/purple_500"
            />
        <Spinner
            android:id="@+id/Spinner_PolicyNumber_FireClaim"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:textSize="25sp"
            android:textColor="#082453"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:padding="5dp"
            android:background="@drawable/shapeicon"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ClaimSummary"
            android:textSize="20dp"
            android:textColor="@color/purple_500"
            android:layout_marginTop="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Fire details"
            android:textColorHint="#A89A9A"
            >
            <EditText
                android:id="@+id/FireDetailsClaim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#082453"
                android:background="@drawable/shapeicon"
                android:inputType="text"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/GetFireClaim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Send Claim Request"
            android:textSize="15dp"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</LinearLayout>