<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_span="10"
    android:orientation="vertical"
    tools:context=".login"
    android:background="@color/white"
    android:gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:textSize="50dp"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:textColor="#082453"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#A89A9A"
            >
            <EditText
                android:id="@+id/signIn_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#082453"
                android:background="@drawable/shapeicon"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/eye"
            app:endIconMode="password_toggle"
            app:endIconDrawable="@drawable/invisible"
            android:hint="@string/password"
            android:textColorHint="#A89A9A"
            >
            <EditText
                android:id="@+id/signIn_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#082453"
                android:background="@drawable/shapeicon"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/invisible"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="#082453"
            android:text="@string/signIn"
            android:textColor="@android:color/white" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forget E-mail ?"
                android:textColor="#082453"
                android:layout_margin="9dp"
                android:onClick="Go_forget"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="if you don't have account,SIGN Up"
                android:textColor="#082453"
                android:onClick="Go_SignUp"
                android:gravity="center_horizontal"
                />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>